--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,22 @@
             <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
           <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
 
+          <div class="container_two_timenavbar imac displaynone" style="width:100%; position:absolute; top:5px;">
+            <p class="largephonemimicnav">
+              <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
+
+              <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
+
+              <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
+                <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
+                <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
+                <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 25px 2px 2px;"></i>
+              </span>
+            </p>
+        </div>
 
           <div class="container_two_timenavbar" style="width:100%; position:absolute;">
-            <p class="largemonitormimicnav">
+            <p class="largemonitormimicnav ipad displaynone">
               <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
               <i class="fa fa-windows" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
               <a href="https://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
@@ -153,7 +166,7 @@
       <p class="resume-prompt" style="margin-top: 2px; margin-bottom: 5px;">
       <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
-I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
+Welcome to my portfolio and thanks for visiting.<br><br>As a designer, I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
     </p>
       <p class="portfolio-tabs-blue" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
 
@@ -245,7 +258,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
     </center>
 
       <p class="resume-prompt " style="margin-top:20px; margin-bottom: 5px;">
-      I have skills in video creation and editing, integrating animation and sounds.  I collaborate with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
+      I hone skills in video creation and editing, integrating animation and sounds.  I collaborate with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
   <td>
 </tr>
 
@@ -898,7 +911,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
       <p class="resume-prompt" style="margin-top: 15px; margin-bottom: 15px; color: #ababab;">
       <!--Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. -->Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> to explore my comprehensive portfolio.<br><br>
       <center>
-      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks for visiting. Have a good day. ~</p>
+      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Have a good day. ~</p>
     </center>
       </p><br><br><br>
     </td>
