--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
 
           <div class="container_two_timenavbar imac displaynone" style="width:100%; position:absolute; top:5px;">
             <p class="largephonemimicnav">
-              <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
+              <span id="datetime2" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
 
               <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
 
