--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;">
-  Design transcends mere appearances &mdash;<br>it's&nbsp;about how it functions.</span><br>
+  Design transcends mere&nbsp;appearances &mdash;<br>it's&nbsp;about how it functions.</span><br>
       </p>
     </td>
   </tr>
