--- a/portfolio.html
+++ b/portfolio.html
@@ -129,7 +129,7 @@
     <td class="threebythreegrid introbiopictureanimation" style="width: 125px; height: 125px; overflow: visible;">
       <center>
       <img alt="Edwin bio picture" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5px; margin-bottom: 10px;">
-        <p class="introtitleedwinau"style="overflow: hidden; color: #333333; font-family: 'oldenbury', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1"></p>
+        <p class="introtitleedwinau"style="overflow: hidden; color: #333333; font-family: 'oldenbury', serif; font-size: 13pt; font-weight: bold; line-height: 1.1"></p>
         <span class="introtitledigitaldesign" style="overflow: hidden; font-weight: normal; font-size: 9.5pt; color: #666666; font-family: 'lato', san-serif">Digital Designer</span>
     </center>
   </td>
