--- a/portfolio.html
+++ b/portfolio.html
@@ -909,7 +909,7 @@ Welcome to my portfolio and thanks for visiting.<br><br>As a designer, I employ 
           <hr style="margin: 0 0 40px 0; background-color: #efefef; width:98%;">
        </center>
       <p class="resume-prompt" style="margin-top: 15px; margin-bottom: 15px; color: #ababab;">
-      <!--Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. -->Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> to explore my comprehensive portfolio.<br><br>
+      <!--Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. -->Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my comprehensive portfolio.<br><br>
       <center>
       <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Please visit again. Have a good day. ~</p>
     </center>
