--- a/portfolio.html
+++ b/portfolio.html
@@ -65,23 +65,30 @@
           <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
 
           <div class="container_two_timenavbar imac displaynone" style="width:100%; position:absolute; top:5px;">
-            <p class="largephonemimicnav">
-              <span id="datetime2" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
+            <table class="largephonemimicnav">
+              <tr>
+                <td style="width:33.33%;">
+                  <span id="datetime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888; position: relative; top: -5px;"></span>
+                </td>
+                <td style="width:33.33%;">
+                  <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
+                </td>
+                <td style="width:33.33%; padding: 0 0 0 10px; position: relative; top: -5px;">
+                  <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
+                    <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
+                    <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
+                    <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 2px 2px 2px;"></i>
+                  </span>
+                </td>
 
-              <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
-
-              <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
-                <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
-                <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
-                <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 25px 2px 2px;"></i>
-              </span>
-            </p>
+              </tr>
+            </table>
         </div>
 
           <div class="container_two_timenavbar" style="width:100%; position:absolute;">
             <p class="largemonitormimicnav ipad displaynone">
-              <i class="fa fa-apple" title="Mac background to come 🔜" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
-              <i class="fa fa-windows" title="Windows background to come 🔜" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
+              <i class="fa fa-apple" title="Mac background to come" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
+              <i class="fa fa-windows" title="Windows background to come" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
               <a href="https://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin" title="View Edwin's LinkedIn 🔗" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
               <a href="tel:+14168803791" title="Call Edwin +14168803791 ☎️" title="whatsapp"><i class="fa fa-whatsapp" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
 <!--              <a href="https://www.instagram.com/edwin.fc.au" target="_blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
@@ -89,7 +96,7 @@
 
 
               <span class="navbarfontawesomefloatright">
-                <i class="fa fa-signal" aria-hidden="true" title="Connection stronger than my coffee ☕" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                <i class="fa fa-signal" aria-hidden="true" title="Connection stronger than morning coffee ☕" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
                 <i class="fa fa-wifi" aria-hidden="true" title="Stay connected, stay inspired! 🌟" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
                 <i class="fa fa-battery-three-quarters" title="Enough juice to keep the ideas flowing! 💡" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
               <a href="https://www.google.com/" target="_blank">
@@ -147,12 +154,12 @@
 
 <!--BLG Section 3 columns-->
 
-<table id="Portfolio" class="threecoloumntables" style="margin-top: 0px">
+<table id="Portfolio" class="threecoloumntables" style="margin-top: -25px">
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 15px;">
-    <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 20pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba);
+      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 10px;">
+    <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 20pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba); line-height: 1.4;
   background-size: 100%;
   background-repeat: repeat;
   -webkit-background-clip: text;
@@ -161,10 +168,10 @@
   -moz-text-fill-color: transparent;">
   Design transcends mere&nbsp;appearances &mdash;<br>it's&nbsp;about how it functions.</span>
       </p>
-      <p class="resume-prompt" style="margin-top: 2px; margin-bottom: 5px;">
+      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 5px;">
       <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
-Welcome to my portfolio and thanks for visiting. As a designer, I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
+Welcome to my portfolio and thanks for visiting. As a designer, I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning interface, experience, and design to the&nbsp;forefront.
     </p>
     </td>
   </tr>
@@ -453,7 +460,7 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
     </td>
 
     <td class="threebythreegridaboutme aboutmethree">
-      <img class="about-me-thumbnails" alt="About Me Leads by example" src="images/AboutMe-Icon-1.png">
+      <img class="about-me-thumbnails three" alt="About Me Leads by example" src="images/AboutMe-Icon-1.png">
       <p>Leads by Example</p>
     </td>
   </tr>
@@ -838,7 +845,7 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin-top: 10px; margin-bottom: 20px;">
+      <p class="resume-prompt" style="margin-top: 20px; margin-bottom: 0px;">
         For two and a half years, I was a part of The Walt Disney Company Canada's Disney OPA team, facilitating collaboration between the Canadian team, the U.S. Glendale office, and our Canadian licensees. My role focused on managing the product approval online portal and process to ensure seamless creation of consumer products that are in line with brand standards.</p>
     </td>
   </tr>
@@ -997,17 +1004,24 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 
   <div class="container_two_timenavbar" style="width:100%; position:absolute; top:5px;">
-    <p class="largephonemimicnav">
-      <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
+    <table class="largephonemimicnav">
+      <tr>
+        <td style="width:33.33%;">
+          <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 5px 5px 25px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888; position: relative; top: -5px;"></span>
+        </td>
+        <td style="width:33.33%;">
+          <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
+        </td>
+        <td style="width:33.33%; padding: 0 0 0 10px; position: relative; top: -5px;">
+          <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
+            <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
+            <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
+            <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 2px 2px 2px;"></i>
+          </span>
+        </td>
 
-      <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
-
-      <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
-        <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
-        <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
-        <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 25px 2px 2px;"></i>
-      </span>
-    </p>
+      </tr>
+    </table>
 </div>
 
 <div class="container_two contact">
