non-breaking space in last paragraph and changed working to background in CPD and Fashion

--- a/portfolio.html
+++ b/portfolio.html
@@ -694,7 +694,7 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
   </center>
 
     <p class="resume-prompt" style="margin-top:20px; margin-bottom: 0;">
-      Prior to digital design, my background was in consumer products design and fashion, with experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
+      I have a background in consumer products design and fashion, with experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
   </td>
 </tr>
 </table>
@@ -988,7 +988,7 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
           <hr style="margin: 0 0 40px 0; background-color: #efefef; width:98%;">
        </center>
       <p class="resume-prompt" style="margin-top: 15px; margin-bottom: 15px; color: #ababab; text-align: center;">
-      <!--Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. -->Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my comprehensive portfolio.<br><br>
+      <!--Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. -->Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my comprehensive&nbsp;portfolio.<br><br>
       <center>
       <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt; line-height: 1.5;">~ Thanks for stopping by, and have an inspiring day! ~</p>
     </center>
