more touchpoints, added CTA to portfolio, and some initial phone UI fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -184,7 +184,7 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
     <table class="threecoloumntables" style="margin-top: 0px">
       <tr>
         <td colspan="3">
-          <p class="portfolio-tabs-blue1" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #dcdcdc, #516395); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px; text-align:left;">
+          <p class="portfolio-tabs-blue1" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px; text-align:left;">
               2020 - 2024 | Digital Designer &ndash; Borden Ladner Gervais LLP
               <i class="fa fa-plus-circle one" aria-hidden="true" style="color: #ffffff; float:right; padding-right: 10px;"></i>
               <i class="fa fa-minus-circle one" aria-hidden="true" style="color: #ffffff; float:right; padding-right: 10px;"></i>
@@ -197,6 +197,11 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
   <div class="content1">
 
     <table class="threecoloumntables" style="margin-top: 0px">
+      <tr>
+        <td colspan="3" style="text-align: right;">
+          <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+        </td>
+      </tr>
       <tr>
           <td class="threebythreegrid" style="border: 5px solid #ffffff;">
             <div class="popup1" onclick="myFunction1()" style="position:relative;">
@@ -434,51 +439,6 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 <!-- End of Video section-->
 
 
-<!-- About me with icons three columsn -->
-
-<table class="threecoloumntables">
-   <tr>
-     <td colspan="3">
-       <center>
-         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px; margin-top:40px; ">
-         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px;">
-      </center>
-     </td>
-   </tr>
-</table>
-
-<table class="threecoloumntables wideaboutme">
-  <tr>
-    <td class="threebythreegridaboutme aboutmeone">
-      <img class="about-me-thumbnails" alt="About Me User Centric" src="images/AboutMe-Icon-3.png">
-      <p>User-Centric</p>
-    </td>
-
-    <td class="threebythreegridaboutme aboutmetwo">
-     <img class="about-me-thumbnails" alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png">
-     <p>Problem&nbsp;Solver</p>
-    </td>
-
-    <td class="threebythreegridaboutme aboutmethree">
-      <img class="about-me-thumbnails three" alt="About Me Leads by example" src="images/AboutMe-Icon-1.png">
-      <p>Leads by Example</p>
-    </td>
-  </tr>
-</table>
-
-<table class="threecoloumntables">
-   <tr>
-     <td colspan="3">
-       <center>
-         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px;">
-         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px;">
-      </center>
-     </td>
-   </tr>
-</table>
-
-
-
 
 <!--BLAKES Section 2 one at 66% columns-->
 
@@ -499,6 +459,11 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 <div class="content2">
 
 <table class="threecoloumntables" style="margin-top: 0px">
+  <tr>
+    <td colspan="3" style="text-align: right;">
+      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+    </td>
+  </tr>
   <tr>
     <td class="threebythreegrid " style="border: 5px solid #ffffff; width: calc(100% / 3 * 2);">
       <div class="popup6" onclick="myFunction6()">
@@ -672,6 +637,15 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
     </td>
 
   </tr>
+</table>
+</div> <!-- Content Div -->
+</div> <!-- Wrapper Div -->
+
+<!-- End of Blakes section-->
+
+<!-- About me with icons three columsn -->
+
+<table class="threecoloumntables">
   <tr>
     <td colspan="3">
       <p class="resume-prompt" style="margin-top:20px; margin-bottom: 0px;">
@@ -679,25 +653,60 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
      </p>
     </td>
   </tr>
-</table>
-</div> <!-- Content Div -->
-</div> <!-- Wrapper Div -->
+   <tr>
+     <td colspan="3">
+       <center>
+         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px; margin-top:20px; ">
+         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px;">
+      </center>
+     </td>
+   </tr>
 
-<!-- prior history blurb-->
+</table>
+
+<table class="threecoloumntables wideaboutme">
+  <tr>
+    <td class="threebythreegridaboutme aboutmeone">
+      <img class="about-me-thumbnails" alt="About Me User Centric" src="images/AboutMe-Icon-3.png">
+      <p>User-Centric</p>
+    </td>
+
+    <td class="threebythreegridaboutme aboutmetwo">
+     <img class="about-me-thumbnails" alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png">
+     <p>Problem&nbsp;Solver</p>
+    </td>
+
+    <td class="threebythreegridaboutme aboutmethree">
+      <img class="about-me-thumbnails three" alt="About Me Leads by example" src="images/AboutMe-Icon-1.png">
+      <p>Leads by Example</p>
+    </td>
+  </tr>
+</table>
 
 <table class="threecoloumntables">
-<tr>
-  <td class="threebythreegrid" colspan="3">
 
-  <center>
-    <hr style="margin: 0; background-color: #efefef; width: 35vw; margin: 40px 0px;">
-  </center>
+   <tr>
+     <td colspan="3">
+       <center>
+         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px;">
+         <hr style="background-color: #dcdcdc; width:35vw; margin: 5px 60px;">
+      </center>
+     </td>
+   </tr>
+   <tr>
+     <td class="threebythreegrid" colspan="3">
 
-    <p class="resume-prompt" style="margin-top:20px; margin-bottom: 0;">
-      I have a background in consumer products design and fashion, with experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
-  </td>
-</tr>
+   <!--  <center>
+       <hr style="margin: 0; background-color: #efefef; width: 35vw; margin: 40px 0px;">
+     </center> -->
+
+       <p class="resume-prompt" style="margin-top:20px; margin-bottom: 10px;">
+         In addition to digital design, I have a background in consumer products design and fashion.  With experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
+     </td>
+   </tr>
 </table>
+
+
 
 <!-- new section for Thinkway -->
 
@@ -719,7 +728,11 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 
 <table class="threecoloumntables" style="margin-top: 0px">
   <tr>
-
+    <td colspan="3" style="text-align: right;">
+      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on image to view experience details</p>
+    </td>
+  </tr>
+  <tr>
     <td class="threebythreegrid" style="border: 5px solid #ffffff;">
       <div class="popup10" onclick="myFunction10()">
         <span class="popuptext10" id="myPopup10">
@@ -777,6 +790,11 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 <div class="content4">
 
 <table class="threecoloumntables" style="margin-top: 0px">
+  <tr>
+    <td colspan="3" style="text-align: right;">
+      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+    </td>
+  </tr>
 
   <tr>
 
@@ -869,8 +887,8 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
     <table class="threecoloumntables">
       <tr>
         <td colspan="3">
-          <p class="portfolio-tabs-blue5" style="background: linear-gradient(45deg, #516395, #516395, #516395, #516395, #dcdcdc, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato', sans-serif; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px; text-align: left;">
-            2013 and earlier
+          <p class="portfolio-tabs-blue5" style="background: linear-gradient(45deg, #516395, #516395, #516395, #516395, #a7a6ba, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato', sans-serif; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px; text-align: left;">
+            2013 and earlier | Dolce & Gabbana, National Bank, Gertex, Bluenotes, Mred
             <i class="fa fa-plus-circle five" aria-hidden="true" style="color: #ffffff; float:right; padding-right: 10px;"></i>
             <i class="fa fa-minus-circle five" aria-hidden="true" style="color: #ffffff; float:right; padding-right: 10px;"></i>
           </p>
@@ -882,6 +900,11 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 <div class="content5">
 
 <table class="threecoloumntables" style="margin-top: 0px">
+  <tr>
+    <td colspan="3" style="text-align: right;">
+      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+    </td>
+  </tr>
   <tr>
     <td colspan="3">
         <p class="resume-prompt" style="margin-top: 10px; margin-bottom: 20px;">
