--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
 <table class="threecoloumntableshamburger" id="backtotop" style="margin-top: 25px;">
   <tr>
-    <td class="threebythreegridhamburger hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible; z-index:10;">
+    <td class="threebythreegridhamburger hamburger" style="position: relative; vertical-align: top; overflow: visible; z-index:10;">
       <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
           <label class="menu__btn" for="menu__toggle">
