--- a/portfolio.html
+++ b/portfolio.html
@@ -198,8 +198,8 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 
     <table class="threecoloumntables" style="margin-top: 0px">
       <tr>
-        <td colspan="3" style="text-align: right;">
-          <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+        <td colspan="3" style="text-align: left;">
+          <p class="click-on-image-cta" style="">*Click on images to view experience details</p>
         </td>
       </tr>
       <tr>
@@ -460,8 +460,8 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 
 <table class="threecoloumntables" style="margin-top: 0px">
   <tr>
-    <td colspan="3" style="text-align: right;">
-      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+    <td colspan="3" style="text-align: left;">
+      <p class="click-on-image-cta" style="">*Click on images to view experience details</p>
     </td>
   </tr>
   <tr>
@@ -728,8 +728,8 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 
 <table class="threecoloumntables" style="margin-top: 0px">
   <tr>
-    <td colspan="3" style="text-align: right;">
-      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on image to view experience details</p>
+    <td colspan="3" style="text-align: left;">
+      <p class="click-on-image-cta" style="">*Click on image to view experience details</p>
     </td>
   </tr>
   <tr>
@@ -791,8 +791,8 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 
 <table class="threecoloumntables" style="margin-top: 0px">
   <tr>
-    <td colspan="3" style="text-align: right;">
-      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+    <td colspan="3" style="text-align: left;">
+      <p class="click-on-image-cta" style="">*Click on images to view experience details</p>
     </td>
   </tr>
 
@@ -901,8 +901,8 @@ Welcome to my portfolio and thanks for visiting. As a designer, I employ critica
 
 <table class="threecoloumntables" style="margin-top: 0px">
   <tr>
-    <td colspan="3" style="text-align: right;">
-      <p style="color: #FF5F1F; font-size: 9pt; font-family: 'lato', sans-serif; font-weight: bold; margin-top: 0px; margin-bottom: 5px; padding-right: 5px; opacity: .7;">Click on images to view experience details</p>
+      <td colspan="3" style="text-align: left;">
+        <p class="click-on-image-cta" style="">*Click on images to view experience details</p>
     </td>
   </tr>
   <tr>
